--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: build 
 
 on:
   push:
@@ -6,33 +6,37 @@ on:
       - main
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: 14
 
       - name: Install dependencies
-        run: |
-          npm install
-          pip install -r requirements.txt
-        working-directory: ./path/to/your/flask/app
+        run: npm install
 
       - name: Build React app
-        run: |
-          npm run build
-        working-directory: ./path/to/your/react/app
+        run: npm run build
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          external_repository: user/repo  # Change to your repository
-          publish_branch: gh-pages
-          publish_dir: ./path/to/your/react/app/build
+          python-version: 3.x
+
+      - name: Install Python dependencies
+        run: pip install -r requirements.txt
+
+      - name: Run Flask tests
+        run: python -m unittest discover tests
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: build/
