--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,6 +36,11 @@ jobs:
         pip install flask-cors
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+    - name: Set up MySQL client
+      run: |
+          sudo apt-get update
+          sudo apt-get install -y mysql-client
+
     - name: Run tests
       run: |
         python -m pytest --cov=app
