--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,10 +16,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python 3.x
         uses: actions/setup-python@v3
         with:
           python-version: "3.x"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -42,28 +44,16 @@ jobs:
         run: |
           python -m pytest --cov=app
 
-      - name: Install Code Climate Test Reporter
-        run: |
-          Invoke-WebRequest -Uri 'https://codeclimate.com/downloads/test-reporter/test-reporter-latest-windows-amd64' -OutFile ./cc-test-reporter
-          Set-ExecutionPolicy RemoteSigned -Scope Process
-          ./cc-test-reporter
-
-      - name: Upload coverage data to Code Climate
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        run: |
-          ./cc-test-reporter before-build
-          ./cc-test-reporter after-build --exit-code $?
-
       - name: Install Ruby and Asciidoctor dependencies
-        uses: ruby/setup-ruby@v1
+        uses: actions/setup-ruby@v1
         with:
           ruby-version: 3.0
 
       - name: Install Asciidoctor gems
         run: |
+          gem install asciidoctor-pdf -v '1.5.3'
           gem install rouge -v '3.15.0'
 
-      - name: Run Asciidoctor
+      - name: Generate PDF from Asciidoctor
         run: |
-          ./gradlew asciidoctor
+          asciidoctor-pdf -D docs/pdf main.adoc
