--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
+    "bootstrap-icons": "^1.11.2",
     "cors": "^2.8.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
@@ -15,6 +19,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
