--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,8 +36,9 @@ jobs:
           pip install flask-cors
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run tests
+      - name: Run tests with SQLite
         run: |
+          sed -i 's|mysql://user:password@localhost/dbname|sqlite:///:memory:|' app.py
           python -m pytest --cov=app
           
       - name: Install Code Climate Test Reporter
