--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,6 +15,17 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      mysql:
+        image: mysql:latest
+        env:
+          MYSQL_ROOT_PASSWORD: AliMaxou2002
+          MYSQL_DATABASE: socsport
+
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - uses: actions/checkout@v3
 
@@ -36,9 +47,8 @@ jobs:
           pip install flask-cors
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run tests with SQLite
+      - name: Run tests
         run: |
-          sed -i 's|mysql://user:password@localhost/dbname|sqlite:///:memory:|' app.py
           python -m pytest --cov=app
           
       - name: Install Code Climate Test Reporter
