--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -62,6 +62,7 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         run: |
           ./cc-test-reporter before-build
+          ./cc-test-reporter format-coverage -t lcov .coverage
           ./cc-test-reporter after-build --exit-code $?
 
       - name: Install Ruby and Asciidoctor dependencies
