--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,13 +45,7 @@ jobs:
           pip install cryptography
           pip install geopy
           pip install flask-cors
-          pip install coverage
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Run tests
-        run: |
-          coverage run -m pytest
-          coverage xml -o coverage.xml
           
       - name: Install Code Climate Test Reporter
         run: |
@@ -64,7 +58,7 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         run: |
           ./cc-test-reporter before-build
-          ./cc-test-reporter format-coverage -t lcov coverage.xml
+          pytest -m pytest --cov=app
           ./cc-test-reporter after-build --exit-code $?
 
       - name: Install Ruby and Asciidoctor dependencies
