--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -58,8 +58,9 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         run: |
-          ./cc-test-reporter before-build
           coverage run -m pytest --cov=app
+          coverage xml -o coverage.xml
+          ./cc-test-reporter before-build
           ./cc-test-reporter after-build --exit-code $? -t coverage.py
 
       - name: Install Ruby and Asciidoctor dependencies
