--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -70,8 +70,8 @@ jobs:
 
       - name: Install Asciidoctor gems
         run: |
-          gem install asciidoctor-pdf -v '1.5.3'
-          gem install rouge -v '3.15.0'
+          gem install asciidoctor-pdf
+          gem install rouge
 
       - name: Generate PDF from Asciidoctor
         run: |
