--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -75,4 +75,4 @@ jobs:
 
       - name: Generate PDF from Asciidoctor
         run: |
-          asciidoctor-pdf -D assets main.adoc
+          asciidoctor-pdf -D assets src/docs/asciidoc/main.adoc
