--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -46,6 +46,7 @@ jobs:
           pip install geopy
           pip install flask-cors
           pip install coverage
+          pip install python_dotenv
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           
       - name: Install Code Climate Test Reporter
