--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Upload coverage data to Code Climate
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          DB_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
         run: |
           coverage run -m pytest
           coverage xml -o coverage.xml
