--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.11.2",
     "cors": "^2.8.5",
     "leaflet": "^1.9.4",
+    "ollama": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
