--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,7 +47,11 @@ jobs:
           pip install flask-cors
           pip install coverage
           pip install python_dotenv
+          pip install ollama
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Run ollama mistral
+        run: ollama run mistral
           
       - name: Install Code Climate Test Reporter
         run: |
