--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,13 +50,8 @@ jobs:
           pip install ollama
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Download and install Ollama
-        run: |
-          curl -L https://ollama.com/latest.tar.gz -o ollama.tar.gz
-          tar -xzf ollama.tar.gz
-          rm ollama.tar.gz
-          mv ollama-*/ollama /usr/local/bin/ollama
-          ollama --version  # Vérifier que Ollama est correctement installé
+      - name: Extract Ollama archive
+        run: tar -xzf ollama/latest.tar.gz -C /usr/local/bin/
 
       - name: Run ollama mistral
         run: ollama run mistral
