--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,10 +50,10 @@ jobs:
           pip install ollama
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Install ollama
+      - name: Download and install Ollama
         run: |
-          wget -q https://github.com/ollama/ollama/releases/download/v0.1.29/ollama-0.1.29-linux-x64.tar.gz
-          tar -xzf ollama-0.1.29-linux-x64.tar.gz
+          wget https://ollama.com/path/to/ollama -O ollama
+          chmod +x ollama
           sudo mv ollama /usr/local/bin/
           
       - name: Run ollama mistral
