--- a/web/backend/data/Dockerfile
+++ b/web/backend/data/Dockerfile
@@ -1,15 +1,13 @@
 # Utilisation de l'image MySQL officielle comme base
 FROM mysql:latest
 
-COPY ./sql_password /sql_password
+COPY ./sql_password.txt /sql_password.txt
 
 # Définition des variables d'environnement pour la configuration de MySQL
 ENV MYSQL_DATABASE=socsport \
-    # MYSQL_ROOT_PASSWORD=AliMaxou2002 \
-    MYSQL_ROOT_PASSWORD_FILE=sql_password \
+    MYSQL_ROOT_PASSWORD_FILE=sql_password.txt \
     MYSQL_USER=socsport-user \
-    # MYSQL_PASSWORD=AliMaxou2002
-    MYSQL_PASSWORD_FILE=sql_password 
+    MYSQL_PASSWORD_FILE=sql_password.txt 
 
 # Exposition du port MySQL
 EXPOSE 3306
